chore: making workflow run on PR merge

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -4,10 +4,10 @@
 name: Node.js CI
 
 on:
-  push:
-    branches: [ $default-branch ]
   pull_request:
-    branches: [ $default-branch ]
+  branches:
+    - main
+  types: [ opened ]
 
 jobs:
   build:
