--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install npm dependencies
-        run: npm ci
+        run: npm install
 
       - name: Lint code
         run: npm run lint
