--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -7,7 +7,7 @@ on:
   push:
     branches: [ master ]
   pull_request:
-    types: [ opened ]
+    types: [ opened, synchronize ]
 
 jobs:
   build:
