--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,11 +1,9 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: build and test workflow
+name: Build and Test on each opened or updated pull request
 
 on:
-  push:
-    branches: [ master ]
   pull_request:
     types: [ opened, synchronize ]
 
