chore: fix docker action #1

--- a/.github/workflows/publish-docker-image-buildx.yml
+++ b/.github/workflows/publish-docker-image-buildx.yml
@@ -19,6 +19,9 @@ jobs:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout the repo
+        uses: actions/checkout@v2
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
@@ -35,5 +38,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
+          file: ./Dockerfile
           push: true
           tags: tooktech/playground:latest,tooktech/playground:1.0.0
