--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -8,7 +8,7 @@ on:
     types: [ opened, synchronize ]
 
 jobs:
-  build:
+  build-on:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -22,6 +22,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+
       - name: Install npm dependencies
         run: npm install
 
@@ -30,6 +31,3 @@ jobs:
 
       - name: Run tests
         run: npm run test
-
-      - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@master
