--- a/.github/workflows/publish-release-docker-image.yml
+++ b/.github/workflows/publish-release-docker-image.yml
@@ -12,7 +12,7 @@ name: Publish RELEASE Docker image
 on:
   push:
     tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
+      - 'v*'
 
 jobs:
   release-to-docker:
@@ -27,6 +27,9 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ secrets.DOCKER_USERNAME }}/playground
+        tags: |
+          type=semver,pattern={{version}}
+          type=semver,pattern={{major}}.{{minor}}
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -39,5 +42,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags[0] }}
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
